--- a/.github/workflows/verilator.yml
+++ b/.github/workflows/verilator.yml
@@ -9,9 +9,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        docker pull verilator/verilator
+        FILE=uart
+        FILES=$(ls *.v | sed s/${FILE}\.\v//)
+        alias DR="docker run --rm --log-driver=none -a stdout -a stderr -w/work -v${PWD}/:/work"
+        DR verilator/verilator -Wall -Wno-UNUSED --top-module $FILE --lint-only $FILE.v $FILES
+        
