--- a/.github/workflows/verilator.yml
+++ b/.github/workflows/verilator.yml
@@ -15,4 +15,9 @@ jobs:
         FILE=uart
         FILES=$(ls *.v | sed s/${FILE}\.\v//)
         echo FILE=$FILE FILES=$FILES
+        echo "PWD IS"
+        pwd
+        echo "FIND ."
+        find .
+        echo "DOCKER RUN"
         docker run --rm --log-driver=none -a stdout -a stderr -w/work -v${PWD}/:/work verilator/verilator -Wall -Wno-UNUSED --top-module $FILE --lint-only $FILE.v $FILES
