--- a/.github/workflows/verilator.yml
+++ b/.github/workflows/verilator.yml
@@ -22,4 +22,7 @@ jobs:
         echo "DoCKER IMAGES"
         docker images
         echo "DoCKER RUN"
-        docker run --rm --log-driver=none -a stdout -a stderr -w/work -v${PWD}/:/work verilator/verilator -Wall -Wno-UNUSED --top-module --lint-only $FILE $FILE.v $FILES
+        docker run --rm \
+          --log-driver=none -a stdout -a stderr \
+          -w/work -v${PWD}/:/work \
+          verilator/verilator -Wall -Wno-UNUSED --lint-only --top-module $FILE $FILE.v $FILES
